--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,9 +7,8 @@
     <string name="title_activity_alert">AlertActivity</string>
     <string name="drawer_open">Slider Menu Opened</string>
     <string name="drawer_close">Slider Menu Closed</string>
-    
-    
-        <!-- Nav Drawer Menu Items -->
+
+    <!-- Nav Drawer Menu Items -->
     <string-array name="nav_drawer_items">
         <item>Home</item>
         <item>Change number</item>
@@ -28,5 +27,6 @@
 
     <!-- Content Description -->
     <string name="desc_list_item_icon">Item Icon</string>
-    
+    <string name="title_activity_start">StartActivity</string>
+
 </resources>
